陆运通:添加pom文件

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
 
-    <name>physical-distribution-management</name>
+    <name>luyuntong</name>
     <description>Physical Distribution Management</description>
 
     <!--jar包版本控制-->
